Fix footer alignment on Projects page.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1554,16 +1554,16 @@ ul {
 }
 
 .projects-page .projects-section {
-    margin-left: 0;
-    width: 100%;
+    margin-left: 250px;
+    width: calc(100% - 250px);
     padding-top: calc(var(--header-height) + 40px);
     background: var(--bg-gradient);
     min-height: calc(100vh - 200px);
 }
 
 .projects-page .site-footer {
-    margin-left: 0;
-    width: 100%;
+    margin-left: 250px;
+    width: calc(100% - 250px);
 }
 
 .project-detail {
@@ -1710,6 +1710,11 @@ ul {
         width: calc(100% - 200px);
     }
     
+    .projects-page .site-footer {
+        margin-left: 200px;
+        width: calc(100% - 200px);
+    }
+    
     .projects-sidebar {
         width: 200px;
     }
@@ -1717,6 +1722,11 @@ ul {
 
 @media (max-width: 768px) {
     .projects-page .projects-section {
+        margin-left: 0;
+        width: 100%;
+    }
+    
+    .projects-page .site-footer {
         margin-left: 0;
         width: 100%;
     }
